cluster/manifests/cloud-provider-gcp.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cloud-controller-manager
  namespace: kube-system
  labels:
    tier: control-plane
    k8s-app: cloud-controller-manager
spec:
  selector:
    matchLabels:
     k8s-app: cloud-controller-manager
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        tier: control-plane
        k8s-app: cloud-controller-manager
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
      - key: node.cloudprovider.kubernetes.io/uninitialized
        value: "true"
        effect: NoSchedule
      - key: node-role.kubernetes.io/control-plane
        effect: NoSchedule
      - key: node.kubernetes.io/not-ready
        effect: NoSchedule
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 65521
        runAsNonRoot: true
      priorityClassName: system-cluster-critical
      hostNetwork: true
      serviceAccountName: cloud-controller-manager
      containers:
        - name: cloud-controller-manager
          image: registry.k8s.io/cloud-provider-gcp/cloud-controller-manager:v34.2.0
          resources:
            requests:
              cpu: 50m
          command:
            - /cloud-controller-manager
          args:
            - --allocate-node-cidrs=true
            - --bind-address=127.0.0.1
            - --cluster-name=$(CLUSTERNAME)
            - --cluster-cidr=$(CLUSTERCIDR)
            - --cloud-provider=gce
            - --cloud-config=/etc/gce.conf
            - --use-service-account-credentials
            - --controllers=*,-gkenetworkparamset
            - -v=2
          livenessProbe:
            httpGet:
              host: 127.0.0.1
              port: 10258
              path: /healthz
              scheme: HTTPS
            initialDelaySeconds: 15
            timeoutSeconds: 15
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: varlibetc
              mountPath: /etc/gce.conf
              subPath: gce.conf
              readOnly: true
      volumes:
        - name: varlibetc
          configMap:
            name: cloud-controller-manager
