cluster/manifests/paloalto-k8slabels.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: paloalto
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: noc-k8slabels-v1
  name: noc-k8slabels-v1
  namespace: paloalto
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: noc-k8slabels-v1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: noc-k8slabels-v1
    spec:
      containers:
      - command:
        - /server
        - --inifile=/secrets/env.ini
        image: ghcr.io/on2itsecurity/noc-k8slabels-v1:latest@sha256:c2eb841683fdb3134adeba91e65ca57dd973612f75d1ef16139abb14fe737442
        name: noc-k8slables-v1
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 30m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10100
        ports:
        - containerPort: 9090
          name: prometheus
          protocol: TCP
        volumeMounts:
        - mountPath: /secrets
          name: envini
      serviceAccountName: noc-k8slabels-v1
      priorityClassName: labelupdater
      volumes:
      - name: envini
        secret:
          secretName: noc-k8slabels-v1
          optional: false
