cluster/manifests/autoscaler.yaml
---
# Source: cluster-autoscaler/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: "autoscaler"
    app.kubernetes.io/name: "gce-cluster-autoscaler"
    app.kubernetes.io/managed-by: "Helm"
    helm.sh/chart: "cluster-autoscaler-9.37.0"
  name: autoscaler-gce-cluster-autoscaler
  namespace: kube-system
spec:
  ports:
    - port: 8085
      protocol: TCP
      targetPort: 8085
      name: http
  selector:
    app.kubernetes.io/instance: "autoscaler"
    app.kubernetes.io/name: "gce-cluster-autoscaler"
  type: "ClusterIP"
---
# Source: cluster-autoscaler/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    {}
  labels:
    app.kubernetes.io/instance: "autoscaler"
    app.kubernetes.io/name: "gce-cluster-autoscaler"
    app.kubernetes.io/managed-by: "Helm"
    helm.sh/chart: "cluster-autoscaler-9.37.0"
  name: autoscaler-gce-cluster-autoscaler
  namespace: kube-system
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: "autoscaler"
      app.kubernetes.io/name: "gce-cluster-autoscaler"
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: "autoscaler"
        app.kubernetes.io/name: "gce-cluster-autoscaler"
    spec:
      priorityClassName: "system-cluster-critical"
      dnsPolicy: "ClusterFirst"
      containers:
        - name: gce-cluster-autoscaler
          image: "registry.k8s.io/autoscaling/cluster-autoscaler:v1.34.3"
          imagePullPolicy: "IfNotPresent"
          command:
            - ./cluster-autoscaler
            - --address=0.0.0.0:8085
            - --cloud-provider=gce
            - --namespace=kube-system
            - --node-group-auto-discovery=mig:namePrefix=igm-$(CLUSTERNAME),min=1,max=84
            - --balance-similar-node-groups=true
            - --cordon-node-before-terminating=true
            - --daemonset-eviction-for-empty-nodes=true
            - --leader-elect=true
            - --logtostderr=true
            - --regional=true
            - --scale-down-enabled=true
            - --skip-nodes-with-local-storage=false
            - --skip-nodes-with-custom-controller-pods=false
            - --stderrthreshold=info
            - --v=2
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8085
          ports:
            - containerPort: 8085
          resources:
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          volumeMounts:
            - mountPath: /etc/gce.conf
              name: gceconf
              readOnly: true
              subPath: gce.conf
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      hostNetwork: true
      serviceAccountName: autoscaler-gce-cluster-autoscaler
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: cluster-autoscaler
          maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
      securityContext:
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      volumes:
        - configMap:
            name: cloud-controller-manager
          name: gceconf
